--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,3 +7,12 @@ stages :
       - data_given/winequality-red.csv
     outs :
       - data/raw/winequality-red.csv
+
+  split_data :
+    cmd : python src/split_data.py --config=params.yaml
+    deps : 
+      - src/split_data.py 
+      - data/raw/winequality-red.csv
+    outs :
+      - data/processed/train_winequality-red.csv
+      - data/processed/test_winequality-red.csv
