--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,3 +16,21 @@ stages :
     outs :
       - data/processed/train_winequality-red.csv
       - data/processed/test_winequality-red.csv
+
+  train_and_evaluate :
+    cmd : python src/train_and_evaluate.py --config=params.yaml
+    deps :
+      - data/processed/train_winequality-red.csv
+      - data/processed/test_winequality-red.csv
+      - src/train_and_evaluate.py
+    params : 
+      - estimators.ElasticNet.params.alpha
+      - estimators.ElasticNet.params.l1_ratio
+    metrics :
+      - report/scores.json :
+          cache : false
+      - report/params.json :
+          cache : false
+    # out :
+    #   - saved_models/model.joblib 
+# ------------------------------
