--- a/params.yaml
+++ b/params.yaml
@@ -1,27 +1,28 @@
-base :
-  project : Red-Wine-Quality-Project
-  random_state : 42
-  target_col : quality
+base:
+  project: winequality-project
+  random_state: 42
+  target_col: TARGET
 
-data_source :
-  s3_source : data_given/winequality-red.csv
+data_source:
+  s3_source: data_given/winequality.csv
 
-load_data :
-  raw_dataset_csv : data/raw/winequality-red.csv
+load_data:
+  raw_dataset_csv: data/raw/winequality.csv
 
-split_data :
-  train_path : data/processed/train_winequality-red.csv
-  test_path : data/processed/test_winequality-red.csv
-  test_size : 0.2
+split_data:
+  train_path: data/processed/train_winequality.csv
+  test_path: data/processed/test_winequality.csv
+  test_size: 0.2
 
-estimators :
-  ElasticNet :
-    params :
-      # alpha : 0.88
-      # l1_ratio : 0.89
-      alpha : 0.9
-      l1_ratio : 0.4
-
+estimators:
+  ElasticNet:
+    params:
+      # alpha: 0.88
+      # l1_ratio: 0.89
+      # alpha: 0.9
+      # l1_ratio: 0.4
+      alpha: 0.5
+      l1_ratio: 0.5
 model_dir: saved_models
 
 reports:
@@ -29,4 +30,10 @@ reports:
   scores: report/scores.json
 
 webapp_model_dir: prediction_service/model/model.joblib
-# ------------------------------------------------
+
+mlflow_config:
+  artifacts_dir: artifacts
+  experiment_name: ElasticNet regression
+  run_name: mlops
+  registered_model_name: ElasticNetWineModel
+  remote_server_uri: http://0.0.0.0:1234
